[Updated] 1. Category and item listInKeyValue Data Updated.